--- a/content/themes/monomark/sass/layout/_footer.scss
+++ b/content/themes/monomark/sass/layout/_footer.scss
@@ -4,8 +4,6 @@ footer{
   margin-bottom: rem-calc(50);
   
   .columns{
-    padding-left: rem-calc(60);
-    
     h3, p{
       margin-bottom: rem-calc(30);
     }
