--- a/content/themes/monomark/sass/layout/_structure.scss
+++ b/content/themes/monomark/sass/layout/_structure.scss
@@ -1,4 +1,4 @@
-#container, header{
+#container, header, footer{
   padding-left: rem-calc(70);
   padding-right: rem-calc(70);
 }
